--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,8 @@
 name: Build
 
 on:
-  push:
-    branches: ["*"]
-  pull_request:
-    branches: ["*"]
-    
+  workflow_dispatch:
+
 jobs:
   build-rootless:
     runs-on: macos-13
