--- a/control
+++ b/control
@@ -1,9 +1,9 @@
-Package: com.socuul.scinsta
-Name: SCInsta
+Package: com.socuul.turkcescinsta
+Name: TurkceSCInsta
 Version: 0.7.1
 Architecture: iphoneos-arm
-Description: A feature-rich tweak for Instagram on iOS!
-Maintainer: SoCuul
-Author: SoCuul
+Description: Instagram için Türkçe ve özellikli bir tweak!
+Maintainer: LilCiro
+Author: LilCiro
 Section: Tweaks
 Depends: mobilesubstrate, ws.hbang.common
