--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Package: com.socuul.turkcescinsta
 Name: TurkceSCInsta
 Version: 0.7.1
 Architecture: iphoneos-arm
-Description: Instagram için Türkçe ve özellikli bir tweak!
+Description: Instagram için Türkçe ve modlanmış bir tweak!
 Maintainer: LilCiro
 Author: LilCiro
 Section: Tweaks
