--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,12 +11,12 @@ jobs:
         with:
           xcode-version: latest-stable
           
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
       - name: Checkout theos/theos
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
         with:
           repository: theos/theos
           ref: master
@@ -24,7 +24,7 @@ jobs:
           path: theos
 
       - name: Checkout SDKs
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
         with:
           repository: theos/sdks
           ref: master
@@ -49,12 +49,12 @@ jobs:
         with:
           xcode-version: '14.2'
           
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
       - name: Checkout theos/theos
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
         with:
           repository: theos/theos
           ref: master
@@ -62,7 +62,7 @@ jobs:
           path: theos
 
       - name: Checkout SDKs
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
         with:
           repository: theos/sdks
           ref: master
@@ -72,6 +72,8 @@ jobs:
         run: brew install make xz ldid
 
       - name: Build package (rootful)
+        # Rootful derlemesi için "THEOS_PACKAGE_SCHEME=rootful" komutu kullanılmaz,
+        # varsayılan olarak rootful derlenir. Bu yüzden komutun sonuna bu parametre eklenmez.
         run: THEOS=theos gmake clean package FINALPACKAGE=1
 
       - name: Upload a Build Artifact (rootful)
