--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-# turkcescinsta projesini derleyip paketleyen iş akışı
+# turkcescinsta projesini rootless ve rootful olarak derleyip paketleyen iş akışı
 
 name: turkcescinsta'yı Derle ve Paketle
 
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build-rootless:
+    name: Derle (Rootless)
     runs-on: macos-13
     steps:
       - uses: maxim-lobanov/setup-xcode@v1
@@ -37,7 +38,6 @@ jobs:
 
       - name: Build package (rootless)
         run: |
-          # Proje dosyaları ana dizinde olduğu için "cd main" komutu kaldırıldı.
           THEOS=theos gmake clean package FINALPACKAGE=1 THEOS_PACKAGE_SCHEME=rootless
 
       - name: Upload a Build Artifact (rootless)
@@ -45,43 +45,3 @@ jobs:
         with:
           name: turkcescinsta_packages_iphoneos-arm64 (rootless)
           path: packages/*_iphoneos-arm64.deb
-
-  build-rootful:
-    runs-on: macos-12
-    steps:
-      - uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '14.2'
-          
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Checkout theos/theos
-        uses: actions/checkout@v4
-        with:
-          repository: theos/theos
-          ref: master
-          submodules: recursive
-          path: theos
-
-      - name: Checkout SDKs
-        uses: actions/checkout@v4
-        with:
-          repository: theos/sdks
-          ref: master
-          path: theos/sdks
-
-      - name: Install dependencies
-        run: brew install make xz ldid
-
-      - name: Build package (rootful)
-        run: |
-          # Proje dosyaları ana dizinde olduğu için "cd main" komutu kaldırıldı.
-          THEOS=theos gmake clean package FINALPACKAGE=1
-
-      - name: Upload a Build Artifact (rootful)
-        uses: actions/upload-artifact@v4
-        with:
-          name: turkcescinsta_packages_iphoneos-arm (rootful)
-          path: packages/*_iphoneos-arm.deb
